// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A suite of tests for Fit Component renders correctly Fit Display Component as "Runs Large 1`] = `
<div
  className="sc-jSFkmK lnDnEi"
>
  <div
    className="sc-gtssRu dWODPw"
  >
    <div
      className="sc-dlnjPT iEAyWe"
    />
    <span
      className="sc-gKAblj dJFrAv"
    />
  </div>
  <span
    className="sc-hKFyIo fNFVfG"
  >
    Runs Small
  </span>
  <span
    className="sc-eCApGN dNfuhr"
  >
    Runs Large
  </span>
</div>
`;

exports[`A suite of tests for Fit Component renders correctly Fit Display Component as "Runs Small 1`] = `
<div
  className="sc-jSFkmK lnDnEi"
>
  <div
    className="sc-gtssRu dWODPw"
  >
    <div
      className="sc-dlnjPT eUUHfX"
    />
    <span
      className="sc-gKAblj dJFrAv"
    />
  </div>
  <span
    className="sc-hKFyIo fNFVfG"
  >
    Runs Small
  </span>
  <span
    className="sc-eCApGN dNfuhr"
  >
    Runs Large
  </span>
</div>
`;

exports[`A suite of tests for Fit Component renders correctly Fit Display Component as "True Fit 1`] = `
<div
  className="sc-jSFkmK lnDnEi"
>
  <div
    className="sc-gtssRu dWODPw"
  >
    <div
      className="sc-dlnjPT dUUXmW"
    />
    <span
      className="sc-gKAblj dJFrAv"
    />
  </div>
  <span
    className="sc-hKFyIo fNFVfG"
  >
    Runs Small
  </span>
  <span
    className="sc-eCApGN dNfuhr"
  >
    Runs Large
  </span>
</div>
`;

exports[`A suite of tests for Helpful Component renders correctly Helpful Button Component 1`] = `
<div>
  Helpful?
  <button
    className="sc-iCoHVE bvCgNS"
    data-testid="yesButton"
    onClick={[Function]}
    value={1}
  >
    Yes ·
     
    1
  </button>
  <button
    className="sc-iCoHVE bvCgNS"
    data-testid="noButton"
    onClick={[Function]}
    value={2}
  >
    No ·
     
    2
  </button>
  <button
    className="sc-iCoHVE bvCgNS"
  >
    Report as inappropriate
  </button>
</div>
`;

exports[`A suite of tests for ImgModal Component does not renders ImgModal Component 1`] = `null`;

exports[`A suite of tests for ImgModal Component renders correctly ImgModal Component 1`] = `
<div
  className="sc-kLokih ibCanN"
>
  <button
    className="sc-gXfWUo hkMISl"
    onClick={[Function]}
  >
    X
  </button>
  <div
    className="sc-iklIKw fulWdc"
  >
    <img
      className="sc-jJMGHv fFYxBt"
    />
    <h3
      className="sc-hiKfjK gEvJoG"
    >
      The Greekest
    </h3>
  </div>
</div>
`;

exports[`A suite of tests for Load More Component renders correctly Load More Button Component 1`] = `
<button
  className="sc-ksluoS djYkNW"
  onClick={[Function]}
>
  Load More
</button>
`;

exports[`A suite of tests for Review Display Component renders correctly Review Display Component 1`] = `
<section
  className="sc-fujyUd bPgFlh"
>
  <div
    className="sc-pNWxx glRlCA"
  >
    <p>
      <b>
        theGreekest
      </b>
    </p>
    <p>
      New York
    </p>
  </div>
  <div
    className="sc-jrsJCI iOXdGf"
  >
    <span
      className="sc-bqGHjH gBkTZR"
    >
      <div
        className="sc-bdnylx ddxNlS"
      />
      3 years ago
    </span>
    <h3
      className="sc-crzoUp ljATUS"
    >
      The Greeks Strike Again
    </h3>
    <p>
      GreekGreekGreekGreekGreekGreekGreekGreekGreekGreekGreekGreekGreekGreekGreekGreekGreek
    </p>
    <p>
      <b>
        Height 
      </b>
      Shorter than 5'
    </p>
    <p>
      <b>
        Weight 
      </b>
      375 - 400 lbs
    </p>
    <p>
      <b>
        Age 
      </b>
      18 to 24
    </p>
    <p>
      <b>
        Primary Usage 
      </b>
      <span
        className="sc-bqGHjH gBkTZR"
      >
        Shirt 
        Pratical 
        #streetWear 
      </span>
    </p>
    <img
      className="sc-iqAbSa jqYKGB"
      onClick={[Function]}
    />
    <div>
      Helpful?
      <button
        className="sc-iCoHVE bvCgNS"
        data-testid="yesButton"
        onClick={[Function]}
        value={1}
      >
        Yes ·
         
        1
      </button>
      <button
        className="sc-iCoHVE bvCgNS"
        data-testid="noButton"
        onClick={[Function]}
        value={2}
      >
        No ·
         
        2
      </button>
      <button
        className="sc-iCoHVE bvCgNS"
      >
        Report as inappropriate
      </button>
    </div>
  </div>
  <div
    className="sc-kEqYlL hWtfSf"
  >
    <h2
      className="sc-dIsAE gEkXsQ"
    >
      Overall Fit Rating
    </h2>
    <div
      className="sc-jSFkmK lnDnEi"
    >
      <div
        className="sc-gtssRu dWODPw"
      >
        <div
          className="sc-dlnjPT dUUXmW"
        />
        <span
          className="sc-gKAblj dJFrAv"
        />
      </div>
      <span
        className="sc-hKFyIo fNFVfG"
      >
        Runs Small
      </span>
      <span
        className="sc-eCApGN dNfuhr"
      >
        Runs Large
      </span>
    </div>
  </div>
</section>
`;

exports[`A suite of tests for Review Stats Container Component renders correctly Review Display Component 1`] = `
<div
  className="sc-giAqnE igbTra"
>
  <h1
    className="sc-ezzayL gJDqIQ"
  >
    Reviews
  </h1>
  <button
    className="sc-bYwzba cCGNpU"
    onClick={[Function]}
  >
    Write a review
  </button>
  <section
    className="sc-bCwgka booarE"
  >
    <div
      className="sc-dlMBXb gabvLs"
    >
      <table
        className="sc-iwaifL kywOwR"
      >
        <thead>
          <tr>
            <td>
              Rating Snapshot
            </td>
          </tr>
          <tr>
            <td>
              Select a row below to filter reviews.
            </td>
          </tr>
          <tr>
            <td
              className="sc-iJCRLp cBIuiF"
            >
              5 ★
              <div
                className="sc-kfYqjs igEuCT"
                onClick={[Function]}
              >
                <div
                  className="sc-fKgIGh eeeCjv"
                />
              </div>
              4
            </td>
          </tr>
          <tr>
            <td
              className="sc-iJCRLp cBIuiF"
            >
              4 ★
              <div
                className="sc-kfYqjs igEuCT"
                onClick={[Function]}
              >
                <div
                  className="sc-fKgIGh fQxxPX"
                />
              </div>
              5
            </td>
          </tr>
          <tr>
            <td
              className="sc-iJCRLp cBIuiF"
            >
              3 ★
              <div
                className="sc-kfYqjs igEuCT"
                onClick={[Function]}
              >
                <div
                  className="sc-fKgIGh kELwhx"
                />
              </div>
              2
            </td>
          </tr>
          <tr>
            <td
              className="sc-iJCRLp cBIuiF"
            >
              2 ★
              <div
                className="sc-kfYqjs igEuCT"
                onClick={[Function]}
              >
                <div
                  className="sc-fKgIGh exikfv"
                />
              </div>
              3
            </td>
          </tr>
          <tr>
            <td
              className="sc-iJCRLp cBIuiF"
            >
              1 ★
              <div
                className="sc-kfYqjs igEuCT"
                onClick={[Function]}
              >
                <div
                  className="sc-fKgIGh jsbgTq"
                />
              </div>
              1
            </td>
          </tr>
        </thead>
      </table>
    </div>
    <div
      className="sc-hHEjAm bXHEUy"
    >
      <table
        className="sc-iwaifL kywOwR"
      >
        <caption>
          Average Customer Ratings
        </caption>
        <thead>
          <tr>
            <td>
              Overall
            </td>
            <td
              className="sc-cxNIbT lbEgEG"
            >
              <div
                className="sc-bdnylx dHfqiF"
              />
            </td>
            <td
              className="sc-cxNIbT lbEgEG"
            >
              4.8
            </td>
          </tr>
          <tr>
            <td
              className="sc-lmgQde cPrNCv"
            >
              Overall Fit Rating
            </td>
            <td
              className="sc-cxNIbT lbEgEG"
            >
              <div
                className="sc-jSFkmK lnDnEi"
              >
                <div
                  className="sc-gtssRu dWODPw"
                >
                  <div
                    className="sc-dlnjPT dfYhMK"
                  />
                  <span
                    className="sc-gKAblj dJFrAv"
                  />
                </div>
                <span
                  className="sc-hKFyIo fNFVfG"
                >
                  Runs Small
                </span>
                <span
                  className="sc-eCApGN dNfuhr"
                >
                  Runs Large
                </span>
              </div>
            </td>
          </tr>
        </thead>
      </table>
    </div>
    <div
      className="sc-dIvqjp fEBpLv"
    >
      <p
        className="sc-bkbjAj kHLutn"
      >
        1–
        5
         
        of
         
        15
         
        Reviews
      </p>
    </div>
    <div
      className="sc-iemXMA iPyMCC"
    >
      <div
        className="sc-fnVYJo iUPTYC"
        data-testid="dropDown"
      >
        Sort By:
         
        Most Recent
         
        ▼
        <div
          className="sc-hBMVcZ cGajHf"
          data-testid="content"
        >
          <div
            className="sc-fFSRdu fmPRGV"
            data-testid="relevant"
            onClick={[Function]}
          >
            Most Relevant
          </div>
          <div
            className="sc-fFSRdu fmPRGV"
            data-testid="helpful"
            onClick={[Function]}
          >
            Most Helpful
          </div>
          <div
            className="sc-fFSRdu fmPRGV"
            data-testid="high"
            onClick={[Function]}
          >
            Highest to Lowest Rating
          </div>
          <div
            className="sc-fFSRdu fmPRGV"
            data-testid="low"
            onClick={[Function]}
          >
            Lowest to Highest Rating
          </div>
          <div
            className="sc-fFSRdu fmPRGV"
            data-testid="recent"
            onClick={[Function]}
          >
            Most Recent
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`A suite of tests for ReviewModal Component it does nopt renders Reviews Services 1`] = `null`;

exports[`A suite of tests for ReviewModal Component renders Reviews Services correctly 1`] = `
<div
  className="sc-cBoprd dYZyTo"
>
  <button
    className="sc-iTVIwl aTpSw"
    onClick={[Function]}
  >
    X
  </button>
  <div
    className="sc-jcwofb gtUsti"
  >
    <img
      className="sc-carGAA iNEvDa"
    />
    The Greekest
  </div>
  <div
    className="sc-ciSmjq RpyRj"
  >
    My Review for REI Co-op Men's Sahara Plaid Long-Sleeve Shirt
  </div>
  <div
    className="sc-ciSmjq RpyRj"
  >
    Product rating*
  </div>
  <div
    className="sc-ciSmjq RpyRj"
  >
    Review title*
  </div>
  <div
    className="sc-ciSmjq RpyRj"
  >
    Review*
  </div>
  <div
    className="sc-ciSmjq RpyRj"
  >
    Would you recommend this product to a friend?
  </div>
  <div
    className="sc-ciSmjq RpyRj"
  >
    Overall Fit
  </div>
  <div
    className="sc-ciSmjq RpyRj"
  >
    Best for:
  </div>
  <div
    className="sc-ciSmjq RpyRj"
  >
    Height
  </div>
  <div
    className="sc-ciSmjq RpyRj"
  >
    Weight Range
  </div>
  <div
    className="sc-ciSmjq RpyRj"
  >
    Age
  </div>
  <div
    className="sc-ciSmjq RpyRj"
  >
    Nickname* Location
  </div>
  <div
    className="sc-ciSmjq RpyRj"
  >
    Email*
  </div>
  <div
    className="sc-ciSmjq RpyRj"
  >
    <button
      className="sc-iBzFoy ebpcog"
    >
      Post Review
    </button>
  </div>
</div>
`;

exports[`A suite of tests for Reviews Services Container renders Reviews Services correctly 1`] = `
<p>
  Be the first to review this product
</p>
`;

exports[`A suite of tests for SortBy Component renders correctly SortBy Review Component by "Highest to Lowest Rating" 1`] = `
<div
  className="sc-fnVYJo iUPTYC"
  data-testid="dropDown"
>
  Sort By:
   
  Highest to Lowest Rating
   
  ▼
  <div
    className="sc-hBMVcZ cGajHf"
    data-testid="content"
  >
    <div
      className="sc-fFSRdu fmPRGV"
      data-testid="relevant"
      onClick={[Function]}
    >
      Most Relevant
    </div>
    <div
      className="sc-fFSRdu fmPRGV"
      data-testid="helpful"
      onClick={[Function]}
    >
      Most Helpful
    </div>
    <div
      className="sc-fFSRdu fmPRGV"
      data-testid="high"
      onClick={[Function]}
    >
      Highest to Lowest Rating
    </div>
    <div
      className="sc-fFSRdu fmPRGV"
      data-testid="low"
      onClick={[Function]}
    >
      Lowest to Highest Rating
    </div>
    <div
      className="sc-fFSRdu fmPRGV"
      data-testid="recent"
      onClick={[Function]}
    >
      Most Recent
    </div>
  </div>
</div>
`;

exports[`A suite of tests for SortBy Component renders correctly SortBy Review Component by "Highest to Lowest Rating" 2`] = `
<div
  className="sc-fnVYJo iUPTYC"
  data-testid="dropDown"
>
  Sort By:
   
  Lowesest to Highest Rating
   
  ▼
  <div
    className="sc-hBMVcZ cGajHf"
    data-testid="content"
  >
    <div
      className="sc-fFSRdu fmPRGV"
      data-testid="relevant"
      onClick={[Function]}
    >
      Most Relevant
    </div>
    <div
      className="sc-fFSRdu fmPRGV"
      data-testid="helpful"
      onClick={[Function]}
    >
      Most Helpful
    </div>
    <div
      className="sc-fFSRdu fmPRGV"
      data-testid="high"
      onClick={[Function]}
    >
      Highest to Lowest Rating
    </div>
    <div
      className="sc-fFSRdu fmPRGV"
      data-testid="low"
      onClick={[Function]}
    >
      Lowest to Highest Rating
    </div>
    <div
      className="sc-fFSRdu fmPRGV"
      data-testid="recent"
      onClick={[Function]}
    >
      Most Recent
    </div>
  </div>
</div>
`;

exports[`A suite of tests for SortBy Component renders correctly SortBy Review Component by "Most Helpful" 1`] = `
<div
  className="sc-fnVYJo iUPTYC"
  data-testid="dropDown"
>
  Sort By:
   
  Most Helpful
   
  ▼
  <div
    className="sc-hBMVcZ cGajHf"
    data-testid="content"
  >
    <div
      className="sc-fFSRdu fmPRGV"
      data-testid="relevant"
      onClick={[Function]}
    >
      Most Relevant
    </div>
    <div
      className="sc-fFSRdu fmPRGV"
      data-testid="helpful"
      onClick={[Function]}
    >
      Most Helpful
    </div>
    <div
      className="sc-fFSRdu fmPRGV"
      data-testid="high"
      onClick={[Function]}
    >
      Highest to Lowest Rating
    </div>
    <div
      className="sc-fFSRdu fmPRGV"
      data-testid="low"
      onClick={[Function]}
    >
      Lowest to Highest Rating
    </div>
    <div
      className="sc-fFSRdu fmPRGV"
      data-testid="recent"
      onClick={[Function]}
    >
      Most Recent
    </div>
  </div>
</div>
`;

exports[`A suite of tests for SortBy Component renders correctly SortBy Review Component by "Most Recent" 1`] = `
<div
  className="sc-fnVYJo iUPTYC"
  data-testid="dropDown"
>
  Sort By:
   
  Most Recent
   
  ▼
  <div
    className="sc-hBMVcZ cGajHf"
    data-testid="content"
  >
    <div
      className="sc-fFSRdu fmPRGV"
      data-testid="relevant"
      onClick={[Function]}
    >
      Most Relevant
    </div>
    <div
      className="sc-fFSRdu fmPRGV"
      data-testid="helpful"
      onClick={[Function]}
    >
      Most Helpful
    </div>
    <div
      className="sc-fFSRdu fmPRGV"
      data-testid="high"
      onClick={[Function]}
    >
      Highest to Lowest Rating
    </div>
    <div
      className="sc-fFSRdu fmPRGV"
      data-testid="low"
      onClick={[Function]}
    >
      Lowest to Highest Rating
    </div>
    <div
      className="sc-fFSRdu fmPRGV"
      data-testid="recent"
      onClick={[Function]}
    >
      Most Recent
    </div>
  </div>
</div>
`;

exports[`A suite of tests for Star Review Component renders correctly Star Review Component with 1 ★'s 1`] = `
<div
  className="sc-bdnylx blTEpM"
/>
`;

exports[`A suite of tests for Star Review Component renders correctly Star Review Component with 3 ★'s 1`] = `
<div
  className="sc-bdnylx cSglpA"
/>
`;

exports[`A suite of tests for Star Review Component renders correctly Star Review Component with 4.5 ★'s 1`] = `
<div
  className="sc-bdnylx dDgCkX"
/>
`;

exports[`A suite of tests for Star Review Component renders correctly Star Review Component with 5 ★'s 1`] = `
<div
  className="sc-bdnylx gulRub"
/>
`;

exports[`A suite of tests for Star Review Component renders correctly Star Review Component with no ★'s 1`] = `
<div
  className="sc-bdnylx eTIvCG"
/>
`;
